Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h

#define PE_ERR_BADSECTIONHEIGHT             560
#define PE_ERR_BADVALUETYPE                 561
#define PE_ERR_INVALIDSUBREPORTNAME         562
#define PE_ERR_NOPARENTWINDOW               564 
#define PE_ERR_INVALIDZOOMFACTOR            565 
#define PE_ERR_PAGESIZEOVERFLOW             567
#define PE_ERR_LOWSYSTEMRESOURCES           568
#define PE_UNCHANGED_COLOR (COLORREF) -2
short CRPE_API PEPrintReport (const char FAR *reportFilePath,
                              BOOL toDefaultPrinter,
                              BOOL toWindow,
                              const char FAR *title,
                              int left,
                              int top,
                              int width,
                              int height,
                              DWORD style,
                              HWND parentWindow);
short CRPE_API PEOpenSubreport (short parentJob,
                                const char FAR *subreportName);
BOOL CRPE_API PECloseSubreport (short printJob);
typedef struct PEJobInfo
{
    WORD StructSize;    
    DWORD NumRecordsRead,
          NumRecordsSelected,
          NumRecordsPrinted;
    WORD  DisplayPageN, 
          LatestPageN,  
          StartPageN;   
    BOOL  printEnded;   
}PEJobInfo;
#define PE_SIZEOF_JOB_INFO (sizeof (PEJobInfo))
short CRPE_API PEGetJobStatus (short printJob,
                               PEJobInfo FAR *jobInfo);
BOOL CRPE_API PESetDialogParentWindow (short printJob,
                                       HWND parentWindow);
BOOL CRPE_API PEEnableProgressDialog (short printJob,
                                      BOOL enable);
#define PE_SECTION_CODE(sectionType,groupN,sectionN) \
    (((sectionType) * 1000) + ((groupN) % 25) + (((sectionN) % 40) * 25))
#define PE_AREA_CODE(sectionType,groupN) \
    PE_SECTION_CODE (sectionType, groupN, 0)
#define PE_SECT_PAGE_HEADER      2
#define PE_SECT_PAGE_FOOTER      7
#define PE_SECT_REPORT_HEADER    1
#define PE_SECT_REPORT_FOOTER    8
#define PE_SECT_GROUP_HEADER     3
#define PE_SECT_GROUP_FOOTER     5
#define PE_SECT_DETAIL           4
#define PE_SECTION_TYPE(sectionCode) ((sectionCode) / 1000)
#define PE_GROUP_N(sectionCode)      ((sectionCode) % 25)
#define PE_SECTION_N(sectionCode)    (((sectionCode) / 25) % 40)
short CRPE_API PEGetNSections (short printJob); 
short CRPE_API PEGetSectionCode (short printJob,  
                                 short sectionN); 
typedef struct PESectionOptions 
{
    WORD StructSize;            
    short visible,              
          newPageBefore,        
          newPageAfter,
          keepTogether,
          suppressBlankSection,
          resetPageNAfter,
          printAtBottomOfPage;
    COLORREF backgroundColor;   
    short underlaySection;      
    short showArea;             
    short freeFormPlacement;
    short reserveMinimumPageFooter; 
}PESectionOptions;
#define PE_SIZEOF_SECTION_OPTIONS (sizeof (PESectionOptions))
BOOL CRPE_API PESetAreaFormat (short printJob,
                               short areaCode,
                               PESectionOptions FAR *options);
BOOL CRPE_API PEGetAreaFormat (short printJob,
                               short areaCode,
                               PESectionOptions FAR *options);
short CRPE_API PEGetNSubreportsInSection (short printJob,
                                          short sectionCode);
DWORD CRPE_API PEGetNthSubreportInSection (short printJob,
                                           short sectionCode,
                                           short subreportN);
#define PE_SUBREPORT_NAME_LEN 128
typedef struct PESubreportInfo
{
    WORD StructSize;            
    char name [PE_SUBREPORT_NAME_LEN];
    short NLinks;
    short isOnDemand;    
    short external;         
    short reimportOption;   
}PESubreportInfo;
#define PE_SIZEOF_SUBREPORT_INFO (sizeof (PESubreportInfo))
BOOL CRPE_API PEGetSubreportInfo (short printJob,
                                  DWORD subreportHandle,
                                  PESubreportInfo FAR *subreportInfo);
#define SECTION_VISIBILITY               58
#define NEW_PAGE_BEFORE                  60
#define NEW_PAGE_AFTER                   61
#define KEEP_SECTION_TOGETHER            62
#define SUPPRESS_BLANK_SECTION           63
#define RESET_PAGE_N_AFTER               64
#define PRINT_AT_BOTTOM_OF_PAGE          65
#define UNDERLAY_SECTION                 66
#define SECTION_BACK_COLOUR              67
#define PE_FFN_SHOW_AREA                        59  
BOOL CRPE_API PESetAreaFormatFormula (short printJob,
                                      short areaCode,
                                      short formulaName, 
                                      const char FAR *formulaString);
BOOL CRPE_API PESetSectionFormatFormula (short printJob,
                                         short sectionCode,
                                         short formulaName, 
                                         const char FAR *formulaString);
#define PE_WORD_LEN           2
#define PE_PF_NAME_LEN        256
#define PE_PF_PROMPT_LEN      256
#define PE_PF_VALUE_LEN       256
#define PE_PF_NUMBER          0
#define PE_PF_CURRENCY        1
#define PE_PF_BOOLEAN         2
#define PE_PF_DATE            3
#define PE_PF_STRING          4
typedef struct PEParameterFieldInfo
{
    WORD StructSize;
    WORD ValueType;
    WORD DefaultValueSet;
    WORD CurrentValueSet;
    char Name [PE_PF_NAME_LEN];
    char Prompt [PE_PF_PROMPT_LEN];
    char DefaultValue [PE_PF_VALUE_LEN];
    char CurrentValue [PE_PF_VALUE_LEN];
    char ReportName [PE_PF_REPORT_NAME_LEN];
    WORD needsCurrentValue; 
    WORD isLimited;
    double MinSize;
    double MaxSize;
    char EditMask [PE_PF_EDITMASK_LEN];
    WORD isHidden;
}PEParameterFieldInfo;
#define PE_SIZEOF_PARAMETER_FIELD_INFO (sizeof (PEParameterFieldInfo))
short CRPE_API PEGetNParameterFields (short printJob);
BOOL CRPE_API PEGetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
BOOL CRPE_API PESetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
#define PE_VI_STRING_LEN 256
typedef struct PEValueInfo
{
    WORD StructSize;
    WORD valueType; 
    double viNumber;
    double viCurrency;
    BOOL viBoolean;
    char viString[PE_VI_STRING_LEN];
    short viDate[3]; 
    short viDateTime[6]; 
    short viTime[3];  
    COLORREF viColor;
    short viInteger;
    char viC; 
	char ignored; 
	long viLong;
} PEValueInfo;
#define PE_SIZEOF_VALUE_INFO (sizeof (PEValueInfo))
#define PE_WORD_LEN          2
BOOL CRPE_API PEHasSavedData (short printJob,
                              BOOL FAR *hasSavedData);
short CRPE_API PEGetNPages (short printJob);
BOOL CRPE_API PEShowNthPage (short printJob,
                             short pageN); 
BOOL CRPE_API PEPrintControlsShowing (short printJob,
                                      BOOL FAR *controlsShowing);
BOOL CRPE_API PESelectPrinter (short printJob,
                               const char FAR *driverName,
                               const char FAR *printerName,
                               const char FAR *portName,
#if defined (WIN32)
BOOL CRPE_API PEGetSelectedPrinter (short printJob,
                                    HANDLE  FAR *driverHandle,
                                    short   FAR *driverLength,
                                    HANDLE  FAR *printerHandle,
                                    short   FAR *printerLength,
                                    HANDLE  FAR *portHandle,
                                    short   FAR *portLength,
#if defined (WIN32)
typedef struct PEPrintOptions
{
    WORD StructSize;            
    unsigned short startPageN,
                   stopPageN;
    unsigned short nReportCopies;
    unsigned short collation;
    char outputFileName[PE_FILE_PATH_LEN];
}
    PEPrintOptions;
#define PE_SIZEOF_PRINT_OPTIONS (sizeof (PEPrintOptions))
typedef struct PEExportOptions
{
    WORD StructSize;               
    char formatDLLName [PE_DLL_NAME_LEN];
    DWORD formatType;
    void FAR *formatOptions;
    char destinationDLLName [PE_DLL_NAME_LEN];
    DWORD destinationType;
    void FAR *destinationOptions;
    WORD nFormatOptionsBytes;      
    WORD nDestinationOptionsBytes; 
}
    PEExportOptions;
#define PE_SIZEOF_EXPORT_OPTIONS (sizeof (PEExportOptions))